# Mercury

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  agents.md  pyproject.toml  run.ps1  run.sh  setup.sh
.github/: copilot-instructions.md  pull_request_template.md
config/: databases.example.toml  local.example.toml  repos.example.toml  retention.example.toml
data/: README.md
docs/: ai_extension_points.md  backup_layout.md  backup_verification.md  database_backup_policy.md  database_deployment_runbook.md  database_module.md  destination_package_and_detach.md  disaster_recovery_runbook.md  mariadb_discovery.md  mercury_hdd_lifecycle_menu.md  mercury_v1_checklist.md  platform_vision.md  prod_to_dev_sync_policy.md  storage_cleanup_policy.md  system_deployment_runbook.md
scripts/: repair-mercury-usb.sh  repair-neptune.sh
sql/: README.md
tests/: conftest.py  test_artifact_permissions.py  test_backup_absent.py  test_backup_batch_terminal.py  test_backup_bugs.py  test_backup_bundle.py  test_backup_content_contract.py  test_backup_detach_refusal.py  test_backup_development.py  test_backup_execute.py  test_backup_freshness.py  test_backup_full_run.py  test_backup_generation_report.py  test_backup_identity_selection.py  test_backup_manifest.py  test_backup_menu.py  test_backup_plan.py  test_backup_root_resolution.py  test_backup_status.py  test_backup_sync_session.py  test_backup_verify.py  test_cli_commands.py  test_cli_m4.py  test_cli_seed.py  test_config_init.py  test_config_repair_local.py  test_database_module.py  test_database_scope.py  (+103 more)
(+373 files in other folders)
