[project]
name = "mercury"
version = "0.1.0"
description = "Fedora-first database backup, disaster recovery, and prod-to-dev sync utility"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/kevin-ch-day/Mercury"
Repository = "https://github.com/kevin-ch-day/Mercury"
Issues = "https://github.com/kevin-ch-day/Mercury/issues"

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.scripts]
mercury = "mercury.cli:main"

[project.optional-dependencies]
mariadb = [
    "pymysql>=1.1",
]
dev = [
    "pytest>=8.0",
    "pymysql>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mercury"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
